--- a/index.html
+++ b/index.html
@@ -74,37 +74,34 @@
     }
 
     // Lógica ao enviar
-    document.getElementById('riskForm').addEventListener('submit', function(e) {
-      e.preventDefault();
+   document.getElementById('riskForm').addEventListener('submit', async function(e) {
+  e.preventDefault();
 
-      const formData = new FormData(this);
-      let totalScore = 0;
-      let responses = [];
+  const formData = new FormData(this);
+  const data = {};
 
-      for (let [key, value] of formData.entries()) {
-        totalScore += parseInt(value);
-        responses.push({ Pergunta: key, Resposta: value });
-      }
+  for (let [key, value] of formData.entries()) {
+    data[key] = value;
+  }
 
-      // Classificação de risco
-      let riskLevel = '';
-      const avg = totalScore / totalQuestions;
-      if (avg <= 1.5) riskLevel = 'Sem risco';
-      else if (avg <= 2.5) riskLevel = 'Pouco risco';
-      else if (avg <= 3.5) riskLevel = 'Risco moderado';
-      else riskLevel = 'Risco alto';
-
-      document.getElementById('result').textContent = `Nível de Risco: ${riskLevel}`;
-
-      // Exporta para Excel
-      const ws = XLSX.utils.json_to_sheet(responses);
-      XLSX.utils.sheet_add_aoa(ws, [["Pergunta", "Resposta"]], { origin: "A1" });
-      XLSX.utils.sheet_add_aoa(ws, [["Nível de Risco", riskLevel]], { origin: `A${responses.length + 3}` });
-
-      const wb = XLSX.utils.book_new();
-      XLSX.utils.book_append_sheet(wb, ws, "Resultados");
-      XLSX.writeFile(wb, "resultado_avaliacao.xlsx");
+  try {
+    const response = await fetch('https://script.google.com/macros/s/AKfycbzJhT0WbJPvcow2zwcq1syxnMgzvNQNDZddgWLz6A2igNtzAX1eEV3GBSNqFlWwff5aww/exec', {
+      method: 'POST',
+      body: JSON.stringify(data),
+      headers: { 'Content-Type': 'application/json' }
     });
+
+    if (response.ok) {
+      alert('Formulário enviado com sucesso!');
+      this.reset();
+    } else {
+      alert('Erro ao enviar.');
+    }
+  } catch (err) {
+    console.error(err);
+    alert('Erro na conexão.');
+  }
+});
   </script>
 </body>
 </html>
