--- a/index.html
+++ b/index.html
@@ -1,107 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Formulário de Avaliação de Risco</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #f4f4f4;
+      padding: 2rem;
+      background-color: #f0f2f5;
     }
     h1 {
       text-align: center;
     }
     form {
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 800px;
+      max-width: 600px;
       margin: auto;
+      background: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     .question {
-      margin-bottom: 15px;
+      margin-bottom: 1.5rem;
     }
     label {
       display: block;
-      margin-bottom: 5px;
+      margin-bottom: .5rem;
+      font-weight: bold;
     }
     select {
       width: 100%;
-      padding: 8px;
+      padding: .5rem;
     }
     button {
-      display: block;
-      margin: 20px auto;
-      padding: 10px 20px;
-      font-size: 16px;
-    }
-    .result {
-      text-align: center;
-      margin-top: 20px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      padding: .75rem 1.5rem;
+      cursor: pointer;
+      border-radius: 4px;
     }
   </style>
 </head>
 <body>
+
   <h1>Formulário de Avaliação de Risco</h1>
+
   <form id="riskForm">
     <div id="questions"></div>
     <button type="submit">Enviar</button>
   </form>
-  <div class="result" id="result"></div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script>
-    const questionsContainer = document.getElementById('questions');
-    const totalQuestions = 20;
-
-    // Gera perguntas
-    for (let i = 1; i <= totalQuestions; i++) {
-      const div = document.createElement('div');
-      div.className = 'question';
-      div.innerHTML = `
-        <label for="q${i}">Questão ${i}</label>
-        <select name="q${i}" required>
-          <option value="">Selecione</option>
-          <option value="1">1 - Sem risco</option>
-          <option value="2">2 - Pouco risco</option>
-          <option value="3">3 - Risco moderado</option>
-          <option value="4">4 - Risco alto</option>
-        </select>
+    // Gerar dinamicamente 20 perguntas
+    const container = document.getElementById('questions');
+    for (let i = 1; i <= 20; i++) {
+      container.innerHTML += `
+        <div class="question">
+          <label for="q${i}">Pergunta ${i}</label>
+          <select name="q${i}" id="q${i}" >
+            <option value="">Selecione</option>
+            <option value="1">1 - Sem risco</option>
+            <option value="2">2 - Pouco risco</option>
+            <option value="3">3 - Risco moderado</option>
+            <option value="4">4 - Risco alto</option>
+          </select>
+        </div>
       `;
-      questionsContainer.appendChild(div);
     }
 
-    // Lógica ao enviar
-   document.getElementById('riskForm').addEventListener('submit', async function(e) {
-  e.preventDefault();
+    // Enviar respostas via fetch para Google Apps Script
+    document.getElementById('riskForm').addEventListener('submit', async function(e) {
+      e.preventDefault();
 
-  const formData = new FormData(this);
-  const data = {};
+      const formData = new FormData(this);
+      const data = {};
+      for (let [key, value] of formData.entries()) {
+        data[key] = value;
+      }
 
-  for (let [key, value] of formData.entries()) {
-    data[key] = value;
-  }
+      try {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbxSVIYsJrIy2-yFd8Y1xnuOkSoJdb30q2cX9PoZ3xVz/dev", {
+          method: 'POST',
+          body: JSON.stringify(data),
+          headers: { 'Content-Type': 'application/json' }
+        });
 
-  try {
-    const response = await fetch('https://script.google.com/macros/s/AKfycbzJhT0WbJPvcow2zwcq1syxnMgzvNQNDZddgWLz6A2igNtzAX1eEV3GBSNqFlWwff5aww/exec', {
-      method: 'POST',
-      body: JSON.stringify(data),
-      headers: { 'Content-Type': 'application/json' }
+        if (response.ok) {
+          alert('Formulário enviado com sucesso!');
+          this.reset();
+        } else {
+          alert('Erro ao enviar o formulário.');
+        }
+      } catch (error) {
+        console.error(error);
+        alert('Erro na conexão. Verifique a URL do script.');
+      }
     });
-
-    if (response.ok) {
-      alert('Formulário enviado com sucesso!');
-      this.reset();
-    } else {
-      alert('Erro ao enviar.');
-    }
-  } catch (err) {
-    console.error(err);
-    alert('Erro na conexão.');
-  }
-});
   </script>
+
 </body>
 </html>
