--- a/index.html
+++ b/index.html
@@ -71,33 +71,28 @@
     }
 
     // Enviar respostas via fetch para Google Apps Script
-    document.getElementById('riskForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
-
-      const formData = new FormData(this);
-      const data = {};
-      for (let [key, value] of formData.entries()) {
-        data[key] = value;
-      }
-
-      try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycby8aetAcYD1zFDTeyBEUsq4Gdmp0re6O9MnIKzN1CBYiRj3pWBkTjJBIP1J0DnHc5glEQ/exec", {
-          method: 'POST',
-          body: JSON.stringify(data),
-          headers: { 'Content-Type': 'application/json' }
-        });
-
-        if (response.ok) {
-          alert('Formulário enviado com sucesso!');
-          this.reset();
-        } else {
-          alert('Erro ao enviar o formulário.');
-        }
-      } catch (error) {
-        console.error(error);
-        alert('Erro na conexão. Verifique a URL do script.');
-      }
-    });
+   document.getElementById('riskForm').addEventListener('submit', function(e) {
+  e.preventDefault();
+  const form = document.getElementById('riskForm');
+  const formData = new FormData(form);
+  
+  // Convert form data to URL-encoded string
+  const urlEncodedData = new URLSearchParams(formData).toString();
+  
+  // Use JSONP approach which works better with Google Apps Script
+  fetch(`https://script.google.com/macros/s/AKfycby8aetAcYD1zFDTeyBEUsq4Gdmp0re6O9MnIKzN1CBYiRj3pWBkTjJBIP1J0DnHc5glEQ/exec?${urlEncodedData}`, {
+    method: 'GET',
+    mode: 'no-cors' // This is important for CORS issues
+  })
+  .then(() => {
+    alert('Formulário enviado com sucesso!');
+    form.reset();
+  })
+  .catch(error => {
+    console.error(error);
+    alert('Erro ao enviar o formulário.');
+  });
+});
   </script>
 
 </body>
